ISO8583 Purchase request processed from External Connector, yet connection not established.